--- a/osiris2/preprocessing/7_Extract_Classes.ipynb
+++ b/osiris2/preprocessing/7_Extract_Classes.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -195,11 +195,29 @@
        "4  340.0  0.333333  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'Unnamed: 0.1.1', 'index'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "df.head()"
    ]
@@ -210,173 +228,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(['Unnamed: 0', 'Unnamed: 0.1', 'Unnamed: 0.1.1', 'index'], axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>class</th>\n",
-       "      <th>column</th>\n",
-       "      <th>course</th>\n",
-       "      <th>date_time</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>mmsi</th>\n",
-       "      <th>next_status_60_column</th>\n",
-       "      <th>next_status_60_date_time</th>\n",
-       "      <th>next_status_60_row</th>\n",
-       "      <th>row</th>\n",
-       "      <th>speed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>2016-10-26 00:20:28+00:00</td>\n",
-       "      <td>35.35294</td>\n",
-       "      <td>12.63126</td>\n",
-       "      <td>111247508.0</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>2016-10-26 01:20:27+00:00</td>\n",
-       "      <td>340.0</td>\n",
-       "      <td>353.0</td>\n",
-       "      <td>0.666667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>126.0</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>2016-10-26 00:23:29+00:00</td>\n",
-       "      <td>35.35294</td>\n",
-       "      <td>12.63126</td>\n",
-       "      <td>111247508.0</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>2016-10-26 01:23:29+00:00</td>\n",
-       "      <td>340.0</td>\n",
-       "      <td>353.0</td>\n",
-       "      <td>0.666667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>127.0</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>2016-10-26 00:35:27+00:00</td>\n",
-       "      <td>34.95978</td>\n",
-       "      <td>12.71980</td>\n",
-       "      <td>111247508.0</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>2016-10-26 01:35:18+00:00</td>\n",
-       "      <td>340.0</td>\n",
-       "      <td>349.0</td>\n",
-       "      <td>0.666667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>0.571429</td>\n",
-       "      <td>2016-10-26 00:56:17+00:00</td>\n",
-       "      <td>34.21719</td>\n",
-       "      <td>12.88836</td>\n",
-       "      <td>111247508.0</td>\n",
-       "      <td>128.0</td>\n",
-       "      <td>2016-10-26 01:56:21+00:00</td>\n",
-       "      <td>342.0</td>\n",
-       "      <td>342.0</td>\n",
-       "      <td>0.333333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>129.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2016-10-26 01:11:10+00:00</td>\n",
-       "      <td>34.01085</td>\n",
-       "      <td>12.97691</td>\n",
-       "      <td>111247508.0</td>\n",
-       "      <td>127.0</td>\n",
-       "      <td>2016-10-26 02:11:24+00:00</td>\n",
-       "      <td>348.0</td>\n",
-       "      <td>340.0</td>\n",
-       "      <td>0.333333</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   class  column    course                  date_time  latitude  longitude  \\\n",
-       "0    0.0   126.0  0.571429  2016-10-26 00:20:28+00:00  35.35294   12.63126   \n",
-       "1    0.0   126.0  0.571429  2016-10-26 00:23:29+00:00  35.35294   12.63126   \n",
-       "2    0.0   127.0  0.571429  2016-10-26 00:35:27+00:00  34.95978   12.71980   \n",
-       "3    0.0   128.0  0.571429  2016-10-26 00:56:17+00:00  34.21719   12.88836   \n",
-       "4    0.0   129.0  0.000000  2016-10-26 01:11:10+00:00  34.01085   12.97691   \n",
-       "\n",
-       "          mmsi  next_status_60_column   next_status_60_date_time  \\\n",
-       "0  111247508.0                  129.0  2016-10-26 01:20:27+00:00   \n",
-       "1  111247508.0                  129.0  2016-10-26 01:23:29+00:00   \n",
-       "2  111247508.0                  129.0  2016-10-26 01:35:18+00:00   \n",
-       "3  111247508.0                  128.0  2016-10-26 01:56:21+00:00   \n",
-       "4  111247508.0                  127.0  2016-10-26 02:11:24+00:00   \n",
-       "\n",
-       "   next_status_60_row    row     speed  \n",
-       "0               340.0  353.0  0.666667  \n",
-       "1               340.0  353.0  0.666667  \n",
-       "2               340.0  349.0  0.666667  \n",
-       "3               342.0  342.0  0.333333  \n",
-       "4               348.0  340.0  0.333333  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df['target_label'] = df['next_status_60_row'].astype(int).astype(str) + '_' +  df['next_status_60_column'].astype(int).astype(str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +247,7 @@
        "Name: target_label, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,15 +257,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drop classes with value_counts <= 100\n",
+    "\n",
+    "WARNINNG: Skip this step for now"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.preprocessing import MultiLabelBinarizer\n",
+    "target_classes = df['target_label'].value_counts() > 100\n",
+    "tc = target_classes[target_classes == True].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2397"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(tc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def filter_class(x):\n",
+    "    return x in tc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['delete'] = df['target_label'].apply(lambda x: filter_class(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df[df['delete']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# OneHot Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoding\n",
     "\n",
-    "mlb = MultiLabelBinarizer()\n",
-    "target = mlb.fit_transform([df['target_label'].tolist()])[0]"
+    "encoder = OneHotEncoder()\n",
+    "target = encoder.fit_transform([df['target_label'].tolist()])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2586"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(encoder.classes_)"
    ]
   },
   {
@@ -419,7 +370,7 @@
     {
      "data": {
       "text/plain": [
-       "2586"
+       "['model/classes.pkl']"
       ]
      },
      "execution_count": 8,
@@ -428,25 +379,15 @@
     }
    ],
    "source": [
-    "len(mlb.classes_)"
+    "import joblib\n",
+    "joblib.dump(encoder, 'model/classes_encoder.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2586"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(target)"
    ]
@@ -458,7 +399,7 @@
    "outputs": [],
    "source": [
     "def get_target(x):\n",
-    "    return mlb.transform([x]).tolist()[0].index(1)"
+    "    return encoder.transform([x]).tolist()[0].index(1)"
    ]
   },
   {
@@ -1185,7 +1126,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1199,7 +1140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
